wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
/* ... */
.third-block {
	color: #333;
	font-family: "proxima-nova", sans-serif;
	font-size: 0.8em;
}
.third-block h2 {
    font-size: 1em;
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 0.4em;
    text-align: center;
    margin: 0em auto 2.25em auto;
    color: #959595;
    border-bottom: 1px solid #e1e1e1;
    padding-bottom: 2em;
}
.third-block ul li {
	margin-bottom: 0.6em;
}
.third-block-wrap a {
    color: #1d1d1d;
}
.third-block-wrap a:hover {
    color: #077fab;
}
.third-block-wrap h4 {
    font-size: 1.1em;
    margin-top: 1em;
    margin-bottom: 0.75em;
    text-transform: none;
    font-weight: 600 !important;
}
.third-block-wrap h4 a {
	font-weight: 600 !important;
}
.third-block-wrap ul {
    line-height: 1.3 !important;
}
.book-title {
  width: 520px;
  margin: 0 auto;
	padding: 10px 0;
  font: 1.2em/1.6em "proxima-nova", sans-serif;
	font-weight: 600;
	text-align: left;
}
.book-title a {
    color: #fff;
    text-decoration: none;
    text-transform: none;
}
#sidebar {
	top: 0;
	margin-top: 5.5em;
	margin-right: 42px;
}
#toc {
	background: #fff;
	-moz-border-radius: 0;
	-o-border-radius: 0;
	-webkit-border-radius: 0;
	border-radius: 0;
	-moz-box-shadow: none;
	-o-box-shadow: none;
	-webkit-box-shadow: none;
	box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
  	padding: 1em;
}
#toc ul li {
	line-height: 1.3;
	margin-bottom: 0.25em;
}
#toc ul li a {
	font-size: 0.75em;
	line-height: 1.1;
}
#booknav {
	background: #ffffff;
	-moz-border-radius: 0;
	-o-border-radius: 0;
	-webkit-border-radius: 0;
	border-radius: 0;
	-moz-box-shadow: none;
	-o-box-shadow: none;
	-webkit-box-shadow: none;
	box-shadow: none;
}
#booknav li {
	border: 2px solid #fff;
	background: #eee;
}
#booknav li:last-child {
	margin-top: -1px;
}
.entry-title {
	text-align: left;
  text-transform: uppercase;
	font-size: 1.5em;
	margin-top: 0;
  margin-bottom: 0;
	padding-top: 1em !important;
	padding-bottom: 0;
	color: #1d1d1d;
  line-height: 1.2;
	font-weight: 600;
}
.entry-content img {
	/*min-width: 100%;*/
}
.content-header {
    color: white;
    padding: 0 0 3.5em 0;
}
.content-header h1,
.content-header h2,
.content-header h4,
.content-header a {
    color: #1d1d1d;
}
.content-header h1 {
    margin-bottom: 0em;
}
.content-header h2 {
    margin-bottom: 0.25em;
}
.content-header a {
    text-decoration: underline;
}
.content-header a:hover {
    text-decoration: none;
}
#content {
	max-width: 895px;
	background-color: #fff;
	border: none;
	-moz-box-shadow: none;
	-o-box-shadow: none;
	-webkit-box-shadow: none;
	box-shadow: none;
	margin: 3em auto 0 auto;
	padding: 0.25em 3em 5em 3em;
	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
	border-radius: 6px;
}
#content ol li, #content ul li {
	margin-bottom: 0.5em;
}
div#wrap {
	min-height: 8em !important;
}
#content h2 {
	font-size: 1em;
	margin-bottom: 1em;
  text-transform: uppercase;
}
#content h3 {
	font-size: 1em;
	text-transform: uppercase;
	margin-top: 1em;
	text-align: left;
}
#content h4 {
	font-size: 0.9em;
	font-weight: 600;
	text-transform: uppercase;
	color: #6c64ad;
}
#content h5 {
	font-size: 0.8em;
	font-weight: 400;
	text-transform: uppercase;
	color: #6c64ad;
}
#content img {
	margin-top: 0.5em auto;
}
#content ul li {
	list-style-type: disc;
	margin-left: 1em;
}
#content blockquote {
	padding: 2em 2em 2em 4em;
}
#content .bcc-box {
	padding: 0 3% 2% 3%;
	margin-bottom: 15px;
	border-radius: 4px;
}
#content .bcc-box h3 {
	margin-top: 0;
	text-align: center;
}
.difficulty {
	float: right;
	font-weight: 600;
	letter-spacing: 0.1em;
	color: #D43900;
	font-size: 0.9em;
	position: absolute;
	right: 2.5em;
	top: 1.75em;
}
#content .bcc-success {
	background-color: #e1f4ff;
	margin-bottom: 1.5em;
}
.bcc-box.bcc-success h3 {
	background-color: #077fab;
}
.bcc-box h3:first-child {
	text-align: center;
	margin: -2% -3% 15px;
	color: #ffffff;
	padding: 15px 0 15px;
}
#content iframe {
    min-width: 100%;
    max-width: 100%;
    margin: 1em auto;
}
#content table {
	margin: 1em 0;
}
/*Footer*/
.footer {
    text-align: center;
    background: #fafafa;
    padding: 2em;
    border-top: 1px solid #e1e1e1;
    margin-top: 3em;
    color: #959595;
    font-family: "proxima-nova", sans-serif;
    font-size: 0.9em;
}
.footer a {
	color: #077fab !important;
}
.license-attribution img {
    margin-bottom: 0.5em;
    margin-top: 1em;
}
.footer table td {
	padding: 0.5em !important;
}

/* Styles added May 20 */

.title-area {
	border-bottom: 1px solid #e1e1e1;
	text-align: center;
}
h2.entry-title-1 {
	text-align: center;
	font-size: 1.5em;
	margin-top: 0;
	margin-left: 0em;
	margin-bottom: 0.1em !important;
	padding-top: 1em !important;
	color: #1d1d1d;
	font-weight: 600;
	border-bottom: none;
	padding-bottom: 0;
}
h3.type-1 {
	text-transform: uppercase;
	color: #959595;
	margin-top: 0 !important;
	font-size: 0.9em !important;
	letter-spacing: 0.05em;
	margin-bottom: 1.4em;
	font-weight: 400;
}

h2.entry-title-2 {
	text-align: left;
	font-size: 1.5em;
	margin-top: 0;
	margin-left: 0em;
	margin-bottom: 0 !important;
	padding-top: 1em !important;
	color: #1d1d1d;
	font-weight: 600;
	border-bottom: none;
	padding-bottom: 0;
	width: 85%;
	line-height: 1.2;
}
h3.type-2 {
	text-transform: uppercase;
	color: #646464;
	line-height: 1.3;
	margin-top: 0.2em !important;
	font-size: 0.9em !important;
	letter-spacing: 0.05em;
	margin-bottom: 1.4em;
	font-weight: 400;
	text-align: left;
	width: 80%;
}
h2.entry-title-3 {
	text-align: left;
	font-size: 1.5em;
	margin-top: 0;
	margin-left: 0em;
	margin-bottom: 0 !important;
	padding-top: 1em !important;
	color: #1d1d1d;
	font-weight: 600;
	border-bottom: none;
	padding-bottom: 0;
}
h3.type-3 {
	text-transform: uppercase;
	color: #959595;
	margin-top: 0 !important;
	font-size: 0.9em !important;
	letter-spacing: 0.05em;
	margin-bottom: 0.5em;
	font-weight: 400;
	text-align: left;
}
.progress {
	margin-bottom: 1.25em;
}
/* ... */

